apps/helpdesk/src/pages/common/components/infobar/Infobar/InfobarCustomerInfo/InfobarCustomerInfo.less
:local {
    .customerInfo {
        padding: var(--layout-spacing-s);
        background: var(--neutral-grey-0); // legacy
    }

    .customerProfile {
        display: flex;
        justify-content: space-between;
        align-items: center;
        gap: var(--layout-spacing-s);
        margin: 0 0 calc(var(--layout-spacing-s)) 0;
    }

    .customerLink {
        flex-grow: 1;
        white-space: nowrap;
        overflow: hidden;
        text-overflow: ellipsis;
    }

    .displayName {
        margin: 0;
        color: var(--neutral-grey-6); // legacy
        font-weight: 600;
        font-size: 17px;
    }

    .customerOptions {
        flex-grow: 0;
    }

    .separator {
        margin: calc(var(--layout-spacing-xs) * 1.5) 0;
        background-color: var(--neutral-grey-2); // legacy
    }

    .igIcon {
        font-size: 16px !important;
        margin-right: var(--layout-spacing-xxs);
    }

    .igFollowSection {
        display: flex;
        gap: var(--layout-spacing-xxs);
        cursor: pointer;
    }

    .igName {
        margin-bottom: var(--layout-spacing-xxs);
    }

    .hideDetails {
        display: grid;
        grid-template-rows: 0fr;
        overflow: hidden;
        margin-left: 25px;
    }

    .showDetails {
        grid-template-rows: 1fr;
    }

    .detailsContent {
        display: flex;
        flex-direction: column;
        margin-left: 3px;
        min-height: 0;
    }

    .showDetailsIcon {
        cursor: pointer;
        margin-left: var(--layout-spacing-xxxs);
    }

    .igFollowers {
        cursor: pointer;
        span:first-child {
            margin-left: 0;
        }
    }
}

.axiom :local {
    .customerInfo {
        background: var(--elevation-neutral-default);
    }

    .displayName {
        color: var(--content-neutral-default);
    }

    .separator {
        background-color: var(--border-neutral-default);
    }
}

